--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -5,12 +5,17 @@
         <label for="email">Mail</label>
         <input type="email" id="email" name="email" ngModel class="form-control">
       </div>
-    
       <div class="form-group">
-        <label for="password">Mail</label>
-        <input type="password" id="password" name="password" ngModel class="form-control">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          ngModel
+          class="form-control">
       </div>
-      <button class="btn btn-primary" type="submit">sign up</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
     </form>
   </div>
 </div>
+
